--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,8 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="surface_color">#2C2C2C</color>
     <color name="white">#FFFFFFFF</color>
     <color name="color_yellow">#F4C536</color>
+    <color name="text_color">#FCF6F6</color>
 </resources>
