--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -138,13 +138,23 @@
         android:layout_height="200dp"
         android:adjustViewBounds="true"
         android:src="@drawable/img_compass"
-        app:layout_constraintBottom_toTopOf="@id/sensor_accuracy"
+        app:layout_constraintBottom_toTopOf="@id/toggle_service"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/gps_coordinates"
         app:layout_constraintWidth_percent="0.8"
         app:tint="@color/text_color" />
 
+    <Button
+        android:id="@+id/toggle_service"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/dimen_8dp"
+        android:text="@string/start_recording"
+        app:layout_constraintBottom_toTopOf="@id/sensor_accuracy"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/image_compass" />
 
     <LinearLayout
         android:id="@+id/sensor_accuracy"
@@ -154,7 +164,7 @@
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@id/debug_values"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/image_compass">
+        app:layout_constraintTop_toBottomOf="@id/toggle_service">
 
         <TextView
             android:layout_width="wrap_content"
@@ -361,5 +371,6 @@
                 tools:text="000" />
         </LinearLayout>
     </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
